k8s/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: betix
spec:
  selector:
    app: core
  ports:
    - port: 5000
      targetPort: 5000
